// Vitest Snapshot v1

exports[`AspectRatio > it works with ratios 1`] = `
<div
  class="_aspectratio_779ae1 _aspectratio-1-1_779ae1"
  data-testid="AspectRatio"
>
  <div>
    Hello world
  </div>
</div>
`;

exports[`AspectRatio > it works with ratios 2`] = `
<div
  class="_aspectratio_779ae1 _aspectratio-1-2_779ae1"
  data-testid="AspectRatio"
>
  <div>
    Hello world
  </div>
</div>
`;

exports[`AspectRatio > it works with ratios 3`] = `
<div
  class="_aspectratio_779ae1 _aspectratio-3-2_779ae1"
  data-testid="AspectRatio"
>
  <div>
    Hello world
  </div>
</div>
`;

exports[`AspectRatio > it works with ratios 4`] = `
<div
  class="_aspectratio_779ae1 _aspectratio-4-3_779ae1"
  data-testid="AspectRatio"
>
  <div>
    Hello world
  </div>
</div>
`;

exports[`AspectRatio > it works with ratios 5`] = `
<div
  class="_aspectratio_779ae1 _aspectratio-16-9_779ae1"
  data-testid="AspectRatio"
>
  <div>
    Hello world
  </div>
</div>
`;

exports[`AspectRatio > it works with ratios 6`] = `
<div
  class="_aspectratio_779ae1 _aspectratio-9-16_779ae1"
  data-testid="AspectRatio"
>
  <div>
    Hello world
  </div>
</div>
`;

exports[`it works with ratios 1`] = `
<div
  class="_aspectratio_779ae1 _aspectratio-1-1_779ae1"
  data-testid="AspectRatio"
>
  <div>
    Hello world
  </div>
</div>
`;

exports[`it works with ratios 2`] = `
<div
  class="_aspectratio_779ae1 _aspectratio-1-2_779ae1"
  data-testid="AspectRatio"
>
  <div>
    Hello world
  </div>
</div>
`;

exports[`it works with ratios 3`] = `
<div
  class="_aspectratio_779ae1 _aspectratio-3-2_779ae1"
  data-testid="AspectRatio"
>
  <div>
    Hello world
  </div>
</div>
`;

exports[`it works with ratios 4`] = `
<div
  class="_aspectratio_779ae1 _aspectratio-4-3_779ae1"
  data-testid="AspectRatio"
>
  <div>
    Hello world
  </div>
</div>
`;

exports[`it works with ratios 5`] = `
<div
  class="_aspectratio_779ae1 _aspectratio-16-9_779ae1"
  data-testid="AspectRatio"
>
  <div>
    Hello world
  </div>
</div>
`;

exports[`it works with ratios 6`] = `
<div
  class="_aspectratio_779ae1 _aspectratio-9-16_779ae1"
  data-testid="AspectRatio"
>
  <div>
    Hello world
  </div>
</div>
`;
